# AIForcesAPI

./: .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.sh  pyproject.toml  readthedocs.yml
docs/: requirements.txt
docs/source/: authentication.rst  challenge.rst  conf.py  contents.rst  contest.rst  debugger.rst  docs_guide.rst  errors.rst  filesystem.rst  index.rst  invocation.rst  media.rst  problem.rst  return_objects.rst  sandbox.rst  submission.rst  tournament.rst  user_info.rst  user_settings.rst
docs/source/_static/: theme_overrides.css
k8s/: web-deployment.yaml  web-service.yaml
webapi/: .coveragerc  conftest.py  pytest.ini
webapi/coverage_viewer/: apps.py  urls.py  views.py
webapi/webapi/: settings.py  urls.py
